--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.6.1"
 coilCompose = "2.0.0"
 converterGson = "2.9.0"
 coreSplashscreenVersion = "1.0.1"
+datastorePreferences = "1.1.3"
 firebaseBom = "33.9.0"
 kotlin = "1.9.0"
 coreKtx = "1.15.0"
@@ -24,9 +25,11 @@ litert = "1.1.2"
 navigationCompose = "2.8.8"
 runtimeLivedata = "1.7.8"
 appcompat = "1.7.0"
+datastoreCoreAndroid = "1.1.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreenVersion" }
@@ -57,6 +60,7 @@ litert = { group = "com.google.ai.edge.litert", name = "litert", version.ref = "
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
